# napari-pitcount-cfim

./: .gitignore  LICENSE  README.md  run_script.py  setup.cfg
.github/workflows/: ci.yml  publish-on-bump.yml  publish.yml  version-bump.yml
src/napari_pitcount_cfim/: _dock_widget.py  loggers.py  napari.yaml  segmentation_worker.py
src/napari_pitcount_cfim/cellpose_analysis/: cellpose_exploration.py  cellpose_user.py
src/napari_pitcount_cfim/config/: __init__.py  settings_handler.py  settings_structure.py
src/napari_pitcount_cfim/czi_reader_plugin/: czi_metadata_processor.py  czi_reader_CFIM.py  metadata_dump.py
src/napari_pitcount_cfim/image_handling/: image_handler.py
src/napari_pitcount_cfim/ml_users/: czseg_user.py  dev_get_model.py  legacy_loader.py  model_loader.py  tart_check.py  tf_user.py  zen_interpreter.py
src/napari_pitcount_cfim/model_training/: extract_deep_features.py  load_czi_image_and_label.py  predict_mask_from_model.py  prepare_training_data.py  preview_dataset_samples.py  preview_pair.py  train_model_from_dataset.py  train_model_from_features.py  training_pipeline.py
src/napari_pitcount_cfim/result_handling/: result_handler.py
src/resources/test_files/: P06 1-Tile-16-1-channel.tiff
src/resources/test_files/cellpose_masks/: Image_mask [1].tif  Image_mask [2].tif  Image_mask [3].tif  Image_mask [4].tif  Image_mask.tif
tests/: .coveragerc  init_test.py  model_test.py  result_handler_test.py  settings_handler_test.py
training-package/: setup.cfg
training-package/training_package/: extract_deep_features.py  predict_mask_from_model.py  prepare_training_data.py  train_model_from_dataset.py  training_pipeline.py
