[metadata]
name = napari-pitcount-cfim
description = A pipeline for stuff #TODO: Get knowledge to write a proper description
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Markus L. Bille
author_email = github+markus@bille.dk

[bumpversion]
current_version = 0.1.0
commit = False
tag = False
parse = (?P<version>\d+\.\d+\.\d+)
serialize =
  {version}
files =
  setup.cfg

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    napari
    QtPy
    PyQt5
    pydantic

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-qt
    codecov

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-pitcount-cfim = napari_pitcount_cfim:napari.yaml

[tool:pytest]
testpaths = tests
