[metadata]
name = napari-pitcount-cfim
description = A pipeline for stuff #TODO: Get knowledge to write a proper description Pitcount
version = 0.7.2
long_description = file: README.md
long_description_content_type = text/markdown
author = Markus L. Bille
author_email = github+markus@bille.dk
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Image Processing
url = https://github.com/MaxusTheOne/napari-pitcount-cfim


[bumpversion]
current_version = 0.7.2
commit = False
tag = False
parse = (?P<version>\d+\.\d+\.\d+)
serialize = {version}
files = setup.cfg

[options]
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
    QtPy
    pydantic
    xmltodict
    cellpose
    tensorflow



[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-qt
    codecov
dev =
    napari[all] < 0.6
    %(test)s



[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-pitcount-cfim = napari_pitcount_cfim:napari.yaml

[options.package_data]
napari_pitcount_cfim =
    napari.yaml
    resources/*

[tool:pytest]
testpaths = tests
